Bug 476506 - Masked Opacity Strength always treated as 100%
Summary: Masked Opacity Strength always treated as 100%
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Brush engines (other bugs)
Version First Reported In: 5.2.1
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: regression, release_blocker
Depends on:
Blocks:
 
Reported: 2023-11-03 13:39 UTC by Freya Lupen
Modified: 2023-11-03 16:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
WaterC Basic Round-Fringe 02 versions comparison (38.42 KB, image/png)
2023-11-03 13:39 UTC, Freya Lupen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Freya Lupen 2023-11-03 13:39:46 UTC
Created attachment 162841 [details]
WaterC Basic Round-Fringe 02 versions comparison

SUMMARY
In 5.2.0/5.2.1, Masked Opacity strength is always treated as 100% (combined with the sensor curves). This affects the behavior of the default brush "j) WaterC Basic Round-Fringe 02" as shown in the attached image, as well as other brushes like Rakurri v2's "rwa) Silkeslør".

STEPS TO REPRODUCE
A. Try to use a brush that makes use of Masked Opacity Strength such as "j) WaterC Basic Round-Fringe 02".
B. Try to modify Masked Opacity Strength.

OBSERVED RESULT
The brush behaves differently, and changing Masked Opacity Strength has no effect.

EXPECTED RESULT
The brush behaves as before, using Masked Opacity Strength.

SOFTWARE/OS VERSIONS
Krita 5.2.0, 5.2.1
Comment 1 Dmitry Kazakov 2023-11-03 16:49:33 UTC
Git commit 6a1daff99cb204a3ac5a05693705ff4ed27a9ed1 by Dmitry Kazakov.
Committed on 03/11/2023 at 17:49.
Pushed by dkazakov into branch 'master'.

Don't enable combined opacity-flow option on masked brushes

M  +3    -1    plugins/paintops/libpaintop/KisFlowOpacityOption.cpp

https://invent.kde.org/graphics/krita/-/commit/6a1daff99cb204a3ac5a05693705ff4ed27a9ed1
Comment 2 Dmitry Kazakov 2023-11-03 16:50:07 UTC
Git commit b676b6e77d7a3008a83115050b2c1c4bc3d568ba by Dmitry Kazakov.
Committed on 03/11/2023 at 17:49.
Pushed by dkazakov into branch 'krita/5.2'.

Don't enable combined opacity-flow option on masked brushes

M  +3    -1    plugins/paintops/libpaintop/KisFlowOpacityOption.cpp

https://invent.kde.org/graphics/krita/-/commit/b676b6e77d7a3008a83115050b2c1c4bc3d568ba