Don't enable combined opacity-flow option on masked brushes

BUG:476506